# shortTextAnswer

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  pyproject.toml
.github/workflows/: test-and-deploy.yml
app/: Dockerfile  evaluation.py  evaluation_response.py  evaluation_response_utilities.py  evaluation_tests.py  graph_gen.py  nlp_evaluation.py  nlp_evaluation_tests.py  nlp_testing_nltk.py  preprocess_word_frequencies.py  requirements.txt  slm_evaluation.py  slm_evaluation_tests.py  slm_instructions.py  slm_rephraser.py  testing_nltk.py
